# brandon

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  cli.yml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
brandon/: main.py  md_utils.py  schemas.py  spec.py
brandon/builders/: docs.py  project.py  summary.py
brandon/builders/languages/: __init__.py  bash.py  python.py  python_single.py
brandon/cli/: generate.py
docs/: index.md
docs/reference/: docs.md  enums.md  project.md  summary.md  version.md
docs/reference/builders/: docs.md  python.md
docs/specification/: examples.md  spec.md
reference/builders/docs/: index.html
reference/builders/python/: index.html
reference/docs/: index.html
reference/enums/: index.html
reference/project/: index.html
reference/summary/: index.html
reference/version/: index.html
search/: search_index.json
specification/examples/: index.html
specification/spec/: index.html
stylesheets/: extra.css
tests/: conftest.py  test_cli.py  test_md_utils.py  test_parser.py
tests/builders/: test_docs.py  test_project.py  test_summary.py
tests/builders/languages/: test_python.py
